# Roadbloks

./: bun.lockb  components.json  eslint.config.js  nuxt.config.ts  package.json  uno.config.ts
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci.yml  publish.yml  update-rust-dependencies.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
