[package]
name = "Roadbloks"
version = "0.1.0-alpha"
description = "WIP app to remove blocks from Roblox"
authors = ["imide"]
license = "MIT"
repository = "https://github.com/imide/Roadbloks"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.24" }
